--- a/catalog.html
+++ b/catalog.html
@@ -71,18 +71,18 @@
         </li>
       </ul>
       <h1 class="page-title">Перфораторы</h1>
-      <section>
-        <h2>Фильтр:</h2>
+      <section class="filters">
+        <h2 class="filters-title">Фильтр:</h2>
         <!-- Здесь будет форма фильтра -->
       </section>
-      <section>
-        <h2>Сортировка:</h2>
-        <ul>
-          <li><a href="#">По цене</a></li>
-          <li><a href="#">По типу</a></li>
-          <li><a href="#">По функционалу</a></li>
-          <li><a href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
-          <li><a href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
+      <section class="sort">
+        <h2 class="sort-title">Сортировка:</h2>
+        <ul class="sort-links">
+          <li><a class="sort-link sort-link-active" href="#">По цене</a></li>
+          <li><a class="sort-link" href="#">По типу</a></li>
+          <li><a class="sort-link" href="#">По функционалу</a></li>
+          <li><a class="sort-link-arrow sort-link-active" href="#">По возрастанию</a></li> <!-- тут будет стрелочка -->
+          <li><a class="sort-link-arrow" href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
         </ul>
       </section>
       <section>
