--- a/catalog.html
+++ b/catalog.html
@@ -85,109 +85,162 @@
           <li><a class="sort-link-arrow" href="#">По убыванию</a></li> <!-- и тут будет стрелочка -->
         </ul>
       </section>
-      <section>
-        <h2>Список перфораторов</h2>
-        <ul>
-          <li>
-            <article>
-              <p></p>
-              <p>
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+      <section class="catalog">
+        <h2 class="visually-hidden">Список перфораторов</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new"></p>
+              <p class="catalog-item-image">
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p></p>
-              <p>
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new"></p>
+              <p class="catalog-item-image">
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new">new</p>
+              <p class="catalog-item-image">
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new">new</p>
+              <p class="catalog-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
               </p>
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p>
-              <a href="blank.html">15500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">22500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">15500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p></p>
-              <p>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new"></p>
+              <p class="catalog-item-image">
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              </p>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new">new</p>
+              <p class="catalog-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price"></p>
+                <a class="catalog-item-button" href="blank.html">12500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-              </p>
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p></p>
-              <a href="blank.html">12500 Р.</a>
-            </article>
-          </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new">new</p>
+              <p class="catalog-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
               </p>
-              <h3>Перфоратор BOSCH BFG 3000</h3>
-              <p>22500 Р.</p>
-              <a href="blank.html">15500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">22500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">15500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p></p>
-              <p>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new"></p>
+              <p class="catalog-item-image">
+                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+              </p>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price">30500 Р.</p>
+                <a class="catalog-item-button" href="blank.html">25500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
+          </li>
+          <li class="catalog-item">
+            <figure class="catalog-item-card">
+              <p class="tag-new">new</p>
+              <p class="catalog-item-image">
                 <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
               </p>
-              <h3>Перфоратор BOSCH BFG 6000</h3>
-              <p>30500 Р.</p>
-              <a href="blank.html">25500 Р.</a>
-            </article>
+              <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
+              <div class="price-container">
+                <p class="catalog-item-old-price"></p>
+                <a class="catalog-item-button" href="blank.html">12500 Р.</a>
+              </div>
+            </figure>
+            <figcaption class="catalog-item-options">
+              <a class="option-buy" href="blank.html">Купить</a>
+              <a class="option-bookmark" href="blank.html">В закладки</a>
+            </figcaption>
           </li>
-          <li>
-            <article>
-              <p>new</p>
-              <p>
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-              </p>
-              <h3>Перфоратор BOSCH BFG 2000</h3>
-              <p></p>
-              <a href="blank.html">12500 Р.</a>
-            </article>
-          </li>
-        </ul>
         <ul>
           <li>
             <a>1</a>
