--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <div class="user-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина «Техномарт»">
+          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
         </a>
         <!-- Здесь будет форма/инпут поиска -->
         <a class="bookmark-link" href="blank.html">Закладки: 0</a>
@@ -92,7 +92,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new"></p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -109,7 +109,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new"></p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -126,7 +126,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new">new</p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -143,7 +143,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new">new</p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
               <div class="price-container">
@@ -160,7 +160,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new"></p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -177,7 +177,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new">new</p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
               <div class="price-container">
@@ -194,7 +194,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new">new</p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
               <div class="price-container">
@@ -211,7 +211,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new"></p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
               <div class="price-container">
@@ -228,7 +228,7 @@
             <figure class="catalog-item-card">
               <p class="tag-new">new</p>
               <p class="catalog-item-image">
-                <img src="https://via.placeholder.com/220x165.png/EE3643/FFFFFF/" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               </p>
               <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
               <div class="price-container">
@@ -269,7 +269,7 @@
         <section class="footer-contacts">
           <h2 class="visually-hidden">Как нас найти</h2>
           <a class="main-footer-logo" href="index.html">
-            <img src="https://via.placeholder.com/220x68.png/EE3643/FFFFFF/" width="220" height="68" alt="Логотип магазина «Техномарт»">
+            <img src="img/logo-technomart-footer.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»">
           </a>
           <p>
             г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
